styles/diary.css
/* Layout styles. */
.page-header {
	margin-top: 0;
	padding-bottom: 10px;
}

.page-header h4 {
	margin: 0;
}

.grid-view {
	padding: 0 !important;
}

.table {
	margin: 0;
}

#point-list .table,
#daily-point-list .table
{
	margin-bottom: 10px;
}

.pager {
	margin: 0 0 10px !important;
}

.summary {
	margin: 10px 0 0 !important;
}

.pagination {
	margin: 10px 0 0;
}

footer {
	margin-top: 20px;
}

footer hr {
	margin: 0 0 10px;
}

.alert {
	margin-top: 10px;
}

/* Form styles. */
form .panel {
	padding: 10px;
}

form .panel :last-child {
	margin-bottom: 0;
}

/* reCAPTCHA styles. */
#recaptcha_image,
.recaptcha-refresh {
	margin-bottom: 10px;
}

#recaptcha_image {
	max-width: 100%;
}

.recaptcha-refresh {
	color: #428bca;
}

/* AJAX request process animation styles. */
.age-points-button img,
.save-import-button img,
.create-backup-button img {
	display: none;
	height: 18px;
}

/* Grid view styles. */
.table-responsive {
	border: none;
	overflow: visible;
}

.wait {
	opacity: 0.75;
	filter: alpha(opacity=75);
	pointer-events: none;
}

.selected td {
	background-color: #D9EDF7 !important;
}

/* Navigation bar styles. */
body {
	padding-top: 70px;
}

.navbar-form {
	margin-right: 0 !important;
	padding-right: 0;
}

/* Verify code styles. */
.verify-code-container {
	margin: 5px 0 10px;
}

.verify-code {
	margin-right: 5px;
	cursor: pointer;
}

.verify-code + button {
	height: 60px;
	font-size: larger;
}

/* Date row styles. */
.date-row {
	display: block;
	margin: 5px;
}

.date-row .label {
	padding-bottom: 0.2em;
	font-size: larger;
}

/* Button column styles. */
.button-column {
	font-size: larger;
}

.button-column.narrow {
	width: 30px !important;
}

.button-column.point-state-column {
	font-size: inherit !important;
	text-align: left !important;
}

.danger .backup_create_duration,
.warning .backup_create_duration
{
	font-weight: bold;
}

/* Point state menu styles. */
.dropdown .glyphicon {
	font-size: larger;
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus
{
	background: #428bca;
	color: white !important;
}

.state-initial {
	font-weight: bold;
	color: rgb(51, 51, 51);
}

a.state-initial:hover,
a.state-initial:focus {
	color: rgb(51, 51, 51);
}

.state-satisfied,
.state-canceled {
	text-decoration: line-through;
}

.state-satisfied {
	color: green !important;
}

.state-not-satisfied {
	color: red !important;
}

.state-canceled {
	color: rgb(128, 128, 128) !important;
}

/* Adding point form styles. */
#Point_text {
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
}

.ui-autocomplete {
	z-index: 1100;
	/* Minimal screen size (QVGA) on mobile (Android)
	 * minus height text point input field.
	 */
	max-height: 206px;
	overflow-x: hidden;
}

.ui-autocomplete-loading {
	background: url('/images/processing-icon.gif') right center no-repeat;
}

/* Additional styles. */
.age-points-button,
.input-group-addon
{
	color: #428bca;
}

.header-with-button {
	padding-bottom: 20px;
}

.header-with-button .btn + .btn {
	margin-right: 5px;
}

.small-text {
	font-size: smaller;
}

.unimportant-text {
	color: #777;
}

.backups-legend,
.access-log-legend {
	margin-top: 10px;
}

.additional-info {
	color: #888;
}

.import-flag-column {
	width: 50px;
	text-align: center;
}

.import-date-column {
	width: 55px;
	text-align: center;
}

#import-editor {
	height: 250px;
	font-size: 14px;
}

.import-view pre {
	white-space: pre-wrap;
}

.import-flag,
.saved-flag {
	cursor: default;
}

.label {
	display: inline-block;
	padding: 5px 10px;
}

